--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
         run: vendor/bin/pint --verbose
 
       # ✅ Advanced Code Style Check
-      - name: Run PHP CodeSniffer
-        run: vendor/bin/phpcs --standard=PSR12 app routes database
+      # - name: Run PHP CodeSniffer
+      #   run: vendor/bin/phpcs --standard=PSR12 app routes database
 
       # ✅ Deploy only if all above steps pass
       - name: Upload via FTP
