--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "maestroerror/laragent": "^0.4.1"
+        "maestroerror/laragent": "^0.4.1",
+        "openai-php/client": "^0.13.0",
+        "openai-php/laravel": "^0.13.0",
+        "phpoffice/phpword": "^1.4",
+        "smalot/pdfparser": "^2.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
