--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,13 @@
         "openai-php/client": "^0.13.0",
         "openai-php/laravel": "^0.13.0",
         "phpoffice/phpword": "^1.4",
-        "smalot/pdfparser": "^2.12"
+        "predis/predis": "^3.2",
+        "smalot/pdfparser": "^2.12",
+        "theodo-group/llphant": "^0.11.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laravel/boost": "^1.0",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.24",
         "laravel/sail": "^1.41",
