--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/Helpers/helper.php",
+            "app/Helpers/constant.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
